--- a/a2/requirements.txt
+++ b/a2/requirements.txt
@@ -2,8 +2,13 @@
 numpy==2.2.2
 pandas==2.2.3
 scipy==1.15.1
-scikit-learn==1.6.1
-xgboost
+scikit-learn==1.5.2
+xgboost==2.1.1
+lightgbm==4.5.0 
+
+# Arrow (needed by pandas & PySpark toPandas)
+pyarrow>=16.1.0,<18.0.0
+cloudpickle==3.0.0
 
 # Viz
 matplotlib==3.10.0
@@ -14,3 +19,5 @@ jupyterlab==4.3.5
 
 # Spark
 pyspark==3.5.5
+
+mlflow==2.16.0
