--- a/a2/requirements.txt
+++ b/a2/requirements.txt
@@ -24,6 +24,7 @@ pyspark==3.5.5
 mlflow>=2.8.0
 psycopg2-binary>=2.9.0
 hyperopt>=0.2.7
+optuna==3.6.1
 
 # Monitoring and Metrics
 prometheus-client>=0.17.0
